hphp/hack/test/typecheck/constraints/override_generic_parameter_bad.php.exp
File "override_generic_parameter_bad.php", line 9, characters 25-27:
The method `get` is not compatible with the overridden method (Typing[4341])
  File "override_generic_parameter_bad.php", line 9, characters 25-27:
  Method `get` has type `(function(string $in): void)` in `C1`
  File "override_generic_parameter_bad.php", line 5, characters 19-21:
  But it has type `(function<T>(T $in): void)` in parent `I1`
  File "override_generic_parameter_bad.php", line 9, characters 25-27:
  Type `(function(string $in): void)` is not a subtype of `(function<T>(T $in): void)`
  File "override_generic_parameter_bad.php", line 9, characters 29-34:
  Expected `string`
  File "override_generic_parameter_bad.php", line 5, characters 26-26:
  But got `T`
